# DESS

./: .gitmodules  CMakeLists.txt  dev_note.md  main.cpp  package.xml
include/: autopilot_states.h  planner_node.hpp
include/CommonMath/: segment.hpp
include/RectangularPyramidPlanner/: monotonic_segment.hpp  steering_planner.hpp  trajectory_cost.hpp
include/RootFinder/: quartic.h
src/: CMakeLists.txt  PlannerNode.cpp  RapidTrajectoryGenerator.cpp  planner_node.cpp  quartic.cpp  steering_planner.cpp
test/: CMakeLists.txt
